[tool.black]
line-length = 80
preview = true


[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-bugbear
    "B",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-no-pep420
    "INP",
    # flake8-pie
    "PIE",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-slots
    "SLOT",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # Pylint
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    # tryceratops
    "TRY",
    # flynt
    "FLY",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    # flake8-bandit
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
    # flake8-pytest-style
    "PT011",  # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    # tryceratops
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY301",  # Abstract raise to an inner function
    # pyupgrade
    "UP040",  # Type alias {name} uses TypeAlias annotation instead of the type keyword - mypy does not support this yet
    # Pylint
    "PLR09",  # Too many {problem}
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # flake8-bandit
    "S101",  # Use of assert detected
]
"yui/migrations/*" = [
    # eradicate
    "ERA001",  # Found commented-out code
]
"yui/migrations/versions/*" = [
    # flake8-no-pep420
    "INP001",  # File {filename} is part of an implicit namespace package. Add an __init__.py.
]

[tool.ruff.lint.isort]
force-single-line = true  # 한 줄 당 1개의 import 문
order-by-type = false  # 모두 대문자인 요소를 우선정렬하는 부분 비활성화
case-sensitive = true  # 대소문자 구분을 켜야 대문자 요소가 우선정렬됨
known-first-party = ["yui"]
section-order = ["future", "standard-library", "third-party", "tests", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
tests = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true  # Warns about unneeded # type: ignore comments.
show_error_codes = true


[tool.poetry]
name = "yui"
version = "0.0.0"
description = "YUI is Multi-purpose Slack Bot."
authors = ["Kim, Jin Su <item4@localhost.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
Babel = "^2.15.0"
SQLAlchemy = {version = "^2.0.31", extras = ["asyncio"]}
SQLAlchemy-Utils = "^0.41.2"
aiocron = "^1.8"
aiohttp = "^3.9.5"
alembic = "^1.13.2"
async-timeout = "^4.0.3"
attrdict = "^2.0.1"
attrs = "^23.2.0"
click = "^8.1.7"
croniter = "^2.0.7"
cssselect = "^1.2.0"
defusedxml = "^0.7.1"
feedparser = "^6.0.11"
lxml = "^5.2.2"
more-itertools = "^10.3.0"
orjson = "^3.10.6"
psycopg = {version = "^3.2.1", extras = ["binary"]}
python-dateutil = "^2.9.0"
rapidfuzz = "^3.9.4"
redis = {version = "^5.0.7", extras = ["hiredis"]}
scipy = "^1.14.0"
sympy = "^1.13.0"
tossi = "^0.3.1"
tzlocal = "^5.2"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
black = "^24.4.2"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.5.3"
time-machine = "^2.14.2"
types-croniter = "^2.0.5"
types-orjson = "^3.6.2"
types-python-dateutil = "^2.9.0"
types-tzlocal = "^5.1.0"
yarl = "^1.9.4"

[tool.poetry.scripts]
yui = "yui.cli:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
